--- a/styles.css
+++ b/styles.css
@@ -533,8 +533,8 @@
 }
 .popular {
   display: flex;
-  margin-left: 0;
-  margin-right: 0;
+  width: 100%;
+  justify-content: space-between;
   align-items: center;
 }
 .pop {
